# ugent-programming-c

./: .gitignore  CMakeLists.txt  main.c  oefeningen.md
labo1/: oefening1.c  oefening2.c  oefening3.c  oefening4.c  oefening5.c  oefening6.c  oefening7-opl.c  oefening7.c  oefening8.c
labo2/: gandhi.txt  oefening10.c  oefening11.c  oefening12.c  oefening13.c  oefening14.c  oefening15.c  oefening16.c  oefening9.c
labo3/: oefening17.c  oefening18.c  oefening19.c  oefening20.c  oefening21.c  oefening22.c  oefening23.c  oefening24.c
labo4/: oefening25.c  oefening26.c  oefening27.c  oefening28.c  oefening29.c  oefening30.c  oefening31.c  oefening32.c
labo5/: oefening33.c  oefening34.c  oefening35.c  oefening36.c  oefening37.c
labo6/: oefening38.c  oefening39.c  oefening40.c  oefening41.c  oefening42.c
