cmake_minimum_required(VERSION 4.0)
project(labo_c C)

set(CMAKE_C_STANDARD 11)

add_executable(main main.c)

# Labo 1: oefeningen 1–8
add_executable(oefening1 labo1/oefening1.c)
add_executable(oefening2 labo1/oefening2.c)
add_executable(oefening3 labo1/oefening3.c)
add_executable(oefening4 labo1/oefening4.c)
add_executable(oefening5 labo1/oefening5.c)
add_executable(oefening6 labo1/oefening6.c)
add_executable(oefening7 labo1/oefening7.c)
add_executable(oefening8 labo1/oefening8.c)

# Labo 2: oefeningen 9–16
add_executable(oefening9 labo2/oefening9.c)
add_executable(oefening10 labo2/oefening10.c)
add_executable(oefening11 labo2/oefening11.c)
add_executable(oefening12 labo2/oefening12.c)
add_executable(oefening13 labo2/oefening13.c)
add_executable(oefening14 labo2/oefening14.c)
add_executable(oefening15 labo2/oefening15.c)
add_executable(oefening16 labo2/oefening16.c)

# Labo 3: oefeningen 17–24
add_executable(oefening17 labo3/oefening17.c)
add_executable(oefening18 labo3/oefening18.c)
add_executable(oefening19 labo3/oefening19.c)
add_executable(oefening20 labo3/oefening20.c)
add_executable(oefening21 labo3/oefening21.c)
add_executable(oefening22 labo3/oefening22.c)
add_executable(oefening23 labo3/oefening23.c)
add_executable(oefening24 labo3/oefening24.c)

# Labo 4: oefeningen 25–32
add_executable(oefening25 labo4/oefening25.c)
add_executable(oefening26 labo4/oefening26.c)
add_executable(oefening27 labo4/oefening27.c)
add_executable(oefening28 labo4/oefening28.c)
add_executable(oefening29 labo4/oefening29.c)
add_executable(oefening30 labo4/oefening30.c)
add_executable(oefening31 labo4/oefening31.c)
add_executable(oefening32 labo4/oefening32.c)

# Labo 5: oefeningen 33–37
add_executable(oefening33 labo5/oefening33.c)
add_executable(oefening34 labo5/oefening34.c)
add_executable(oefening35 labo5/oefening35.c)
add_executable(oefening36 labo5/oefening36.c)
add_executable(oefening37 labo5/oefening37.c)

# Labo 6: oefeningen 38–42
add_executable(oefening38 labo6/oefening38.c)
add_executable(oefening39 labo6/oefening39.c)
add_executable(oefening40 labo6/oefening40.c)
add_executable(oefening41 labo6/oefening41.c)
add_executable(oefening42 labo6/oefening42.c)
